--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,3 +26,53 @@ footer {
 	width: 100px;
 	height: 100px;
 }
+.container__slider {
+	position: relative;
+	margin: auto;
+	height: 300px;
+	width: 1000px;
+	background: white;
+	overflow: hidden;
+}
+.comtainer__slider .slider {
+	position: relative;
+	width: 400%;
+	height: 100%;
+	display: flex;
+	overflow: hidden;
+	animation: moverse 10s infinite linear;
+}
+.comtainer__slider .slider li{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	
+}
+.comtainer__slider .slider li img{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+@keyframes moverse {
+	0%,20%{
+		margin-left: 0px;
+	}
+	25%{
+		margin-left: -100%;
+	}
+	50%{
+		margin-left: -200%;
+	}
+	75%,100%{
+		margin-left: -300%;
+	}
+}
+.mi_textarea {
+	width: 600px;
+	height: 200px;
+	padding: 4px;
+}
+.mi_titulo{
+	width: 300px
+}
